Updates for create, update, delete, search Remaining exceptions and completing all functions